--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.products-all {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.product {
+  width: 30%;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 5px 10px 20px -15px #000;
+  color: dimgray;
+}
+
+.product > img {
+  width: 100%;
+}
