--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,3 +32,23 @@ code {
 .product > img {
   width: 100%;
 }
+
+.cart-all {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.single-cart-item {
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 5px 10px 20px -15px #000;
+  color: dimgray;
+}
+
+.single-cart-item > img {
+  width: 100%;
+}
