--- a/frontend/public/styles/cart_responsive.css
+++ b/frontend/public/styles/cart_responsive.css
@@ -205,21 +205,21 @@
 	{
 		width: auto;
 	}
-	.product_text > span
+	.cart_product_text > span
 	{
 		display: inline-block;
 		margin-right: 10px;
 	}
-	.product_number
+	.cart_product_number
 	{
 		width: auto;
 		padding-left: 0;
 	}
-	.product_image
+	.cart_product_image
 	{
 		margin-top: 10px;
 	}
-	.product_name_container
+	.cart_product_name_container
 	{
 		padding-left: 0;
 		margin-top: 15px;
@@ -347,16 +347,16 @@
 	{
 		font-size: 20px;
 	}
-	.button
+	.cart_button
 	{
 		height: 35px;
 	}
-	.button a
+	.cart_button a
 	{
 		font-size: 14px;
 		line-height: 35px;
 	}
-	.button:not(:last-child)
+	.cart_button:not(:last-child)
 	{
 		margin-right: 15px;
 	}
