--- a/frontend/public/styles/main_styles.css
+++ b/frontend/public/styles/main_styles.css
@@ -752,12 +752,6 @@ section
 	width: 100%;
 	height: 100%;
 }
-.home_container
-{
-	width: 100%;
-	height: 100%;
-	padding-top: 73px;
-}
 .home_content
 {
 	width: 100%;
@@ -956,7 +950,7 @@ section
 	width: 100%;
 	height: 100%;
 }
-.product_buttons > div > div
+.product_buttons > div > button
 {
 	width: 50%;
 	height: 100%;
@@ -968,28 +962,35 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.product_buttons > div > div svg
+
+.product_buttons > div > button:disabled
+{
+	opacity: 0.3;
+	cursor: not-allowed;
+}
+
+.product_buttons > div > button svg
 {
 	max-width: 100%;
 	height: auto;
 }
-.home_item_large .product_buttons > div > div
+.home_item_large .product_buttons > div > button
 {
 	border-top: solid 1px rgba(255,255,255,0.2);
 }
-.product_buttons > div > div:hover
+.product_buttons > div > button:hover
 {
 	background: #2fce98;
 }
-.home_item_large .product_buttons > div > div:hover
+.home_item_large .product_buttons > div > button:hover
 {
 	background: rgba(255,255,255,0.1);
 }
-.product_buttons > div > div:first-of-type
+.product_buttons > div > button:first-of-type
 {
 	border-right: solid 1px #ededed;
 }
-.home_item_large .product_buttons > div > div:first-of-type
+.home_item_large .product_buttons > div > button:first-of-type
 {
 	border-right: solid 1px rgba(255,255,255,0.2);
 }
